--- a/practice/03/index.html
+++ b/practice/03/index.html
@@ -33,7 +33,24 @@
                 </ul>
             </nav>
         </header>
-        <section id="container"></section>
+        <section id="container">
+            <section id="menu1" class="content">
+                <h2>Introduce Company</h2>
+                <div class="conbox"></div>
+            </section>
+            <section id="menu2" class="content">
+                <h2>Introduce Books</h2>
+                <div class="conbox"></div>
+            </section>
+            <section id="menu3" class="content">
+                <h2>FAQ</h2>
+                <div class="conbox"></div>
+            </section>
+            <section id="menu4" class="content">
+                <h2>Contact Us</h2>
+                <div class="conbox"></div>
+            </section>
+        </section>
         <footer>
             <address>(04003)서울특별시 마포구 잔다리로 109 TEL (02)000-0000 FAX (02)000-0000</address>
               <p>Copyright(c)2020 Hazel㈜ HazelCompany Co., Ltd. All Rights Reserved</p> 
