--- a/practice/07/index.html
+++ b/practice/07/index.html
@@ -86,7 +86,6 @@
 				<div class="conbox">
 					<section class="content_wrap">
 						<h3>도서상세내용</h3>
-						<!--도서 상세 정보-->
 						<div class="book_detail">
 							<article class="notebook">
 								<div class="detail_content">
@@ -105,8 +104,8 @@
 										</ul>
 										<p class="point_text">
 											<strong>문과생도 컴맹도 아무 것도 몰라도 <br />이 한권으로 OK!</strong>
-											이 책으로 공부하면 기초 태그부터 반응형 웹까지 한 번에 배울 수 있습니다. 자세한 설명과 간단명료한 많은 예제로 웹 표준의 정석을 익힐
-											수 있습니다.
+											이 책으로 공부하면 기초 태그부터 반응형 웹까지 한 번에 배울 수 있습니다. 자세한 설명과
+											간단명료한 많은 예제로 웹 표준의 정석을 익힐 수 있습니다.
 										</p>
 										<a href="http://easyspub.co.kr/20_Menu/BookView/119/PUB" class="commbtn pink"
 											target="blank">구매사이트</a>
@@ -114,7 +113,6 @@
 								</div>
 							</article>
 						</div>
-						<!--도서 리스트-->
 						<div class="book_rollwrap">
 							<button class="roll_left"></button>
 							<button class="roll_right"></button>
